--- a/FinMan/FinMan.csproj
+++ b/FinMan/FinMan.csproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\CategoryActivity.cs" />
+    <Compile Include="Activities\CreateAccountActivity.cs" />
     <Compile Include="Activities\CreateCustomerActivity.cs" />
     <Compile Include="Activities\CurrencyConversionActivity.cs" />
     <Compile Include="Activities\SplashScreenActivity.cs" />
@@ -164,9 +165,12 @@
     </AndroidResource>
     <AndroidResource Include="Resources\layout\Login.axml" />
     <AndroidResource Include="Resources\layout\CreateCustomer.axml" />
-    <AndroidResource Include="Resources\layout\BankSelection.axml" />
+    <AndroidResource Include="Resources\layout\BankSelection.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\CurrencyConversion.axml" />
     <AndroidResource Include="Resources\layout\SplashScreen.axml" />
+    <AndroidResource Include="Resources\layout\CreateAccount.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
@@ -217,6 +221,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\finman_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\nav_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\color.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
